@@ -20,6 +20,7 @@
     WATO:
     * 0990 FIX: Fix HTTP error handling in bulk inventory...
     * 0947 FIX: WATO snapshots: fixed missing files on restoring nagvis backup domains
+    * 1044 FIX: Remove icon for service parameters in WATO service list for missing services...
 
     Event Console:
     * 1040 FIX: Avoid sporadic errors when checking event state in Event Console...
